--- a/topgun-react/package.json
+++ b/topgun-react/package.json
@@ -27,9 +27,10 @@
     "react-icons": "^5.3.0",
     "react-loading-icons": "^1.1.0",
     "react-quill": "^2.0.0",
-    "react-router": "^6.26.2",
+    "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "sockjs-client": "^1.6.1",
