--- a/topgun-react/package.json
+++ b/topgun-react/package.json
@@ -7,7 +7,10 @@
     "@amcharts/amcharts4-geodata": "^4.1.30",
     "@amcharts/amcharts5": "^5.10.7",
     "@amcharts/amcharts5-geodata": "^5.1.4",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fawazahmed0/currency-api": "^2024.10.1",
+    "@mui/material": "^6.1.5",
     "@nivo/geo": "^0.87.0",
     "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -26,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-loading-icons": "^1.1.0",
+    "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
