--- a/topgun-react/.env.production
+++ b/topgun-react/.env.production
@@ -1,3 +1,3 @@
 # npm run build setting
 #REACT_APP_BASE_URL=https://host.sysout.co.kr
-REACT_APP_BASE_URL=
+REACT_APP_BASE_URL=https://host.sysout.co.kr
